# cmwetherell.github.io

./: .gitignore  Pipfile  README.md  mongoUpload.sh  pyproject.toml  scrapish.ipynb  wccGameAnalysis.json
chess-sim/: databaseProcessing.py  exploreSims.py  grandPrix.py  runSims.py  situationExplorer.py  utils.py
chess-sim/data/: berlinPoolGames.csv
chessSim/: candidatesTorunament.py  databaseProcessing.py  grandPrix.py  norwayChess.py  player.py  predictionDict.py  runOlympiadSims.py  runSimSlow.py  runSims.py  runSimsSimple.py  scrape2700.py  scrape2700women.py  scrapeOlympiad findTeam.py  scrapeOlympiad.py  scrapeOlympiadWomensy.py  scrape_fide.py  simOlympiad  simOlympiad.py  simOlympiadW.py  sinquefieldCup.py  situationExplorer.py  superbetClassic.py  tataSteel.py  trainModel.py  updateCandidates.py  uploadSims.py  utils.py  wcc.py
chessSim/analysis/: candidates_2026_blog.py  gen_chart_score_conversion.py  round5_stats.py
chessSim/data/: gpEloData.csv  wccGames2024.csv
docs/: CNAME  Gemfile  README.md  _config.yml  about.markdown  about.md  archive.md  index.md
docs/2022-superbet-chess-classic-romania/: index.md
docs/_drafts/: 2022-03-05-Belgrade-Grand-Prix-Scenario-Explorer-Day-4.md  2026-04-15-Elocator-V2-Position-Complexity.md
docs/_includes/: google-analytics.html  header.html
docs/_layouts/: post.html
docs/_posts/: 2022-02-20-nakamura-likely-to-qualify-for-candidates-2022.md  2022-02-20-welcome-to-jekyll.markdown  2022-02-21-FIDE-Grand-Prix-Belgrade-Odds.md  2022-02-22-FIDE-Grand-Prix-Belgrade-Odds.md  (+38 more)
docs/assets/: main.scss
(+32 files in other folders)
