[tool.poetry]
name = "pawnalyze"
version = "0.1.0"
description = ""
authors = ["Caleb <cmwetherell@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
numpy = "^1.26.4"
lightgbm = "^4.3.0"
tqdm = "^4.66.2"
requests = "^2.31.0"
urllib3 = "^2.2.1"
lxml = "^5.1.0"
ipykernel = "^6.29.2"
pyarrow = "^15.0.0"
pymongo = "^4.6.2"
sqlalchemy = "^2.0.27"
psycopg2-binary = "^2.9.9"
chess = "^1.10.0"
python-dotenv = "^1.0.1"
plotly = "^5.20.0"
nbformat = "^5.10.3"
prettytable = "^3.10.0"
kaleido = "0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
